# course-equivalency-checker

./: .gitignore  make.sql  readme.md
icabroad/: README.md  pyproject.toml
icabroad/icabroad/: app.py
icabroad/icabroad/routes/: rmodels.py  routes.py  routeutils.py  rutils.py
icabroad/icabroad/templates/: apply.html  base.html  buddy.html  continent.html  course-equiv.html  easter-egg.html  faq.html  home.html  kanat.html  login.html  menu.html  navbar.html
icabroad/icabroad/templates/admin/: admin-navbar.html  admin.html  crud_add_course.html  crud_course.html  crud_course_link.html  crud_links.html  crud_partner.html  test.html
icabroad/icabroad/templates/auth/: login.html  register.html
icabroad/icabroad/templates/partners/: continents.html  partner.html
icabroad/icabroad/templates/tabs/: apply.html  course-equiv.html
proposal/: Makefile  main.tex  nwstyle.sty
report/: er-diagram.drawio
