[tool.poetry]
name = "icabroad"
version = "0.1.0"
description = "A rework of Mahidol University International College's IC Abroad website"
authors = ["Nawat Ngerncham <nawat.ngn@student.mahidol.edu>", "Chayapol Bunnag <chayapol.bun@student.mahidol.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
jinja2 = "^3.1.2"
flask-mysql = "^1.5.2"
bootstrap-flask = "^2.2.0"
werkzeug = "^2.2.2"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"